Opened 12 years ago

Closed 12 years ago

#9957 closed bug (fixed)

Package_daemon crash

Reported by: DaaT Owned by: nobody
Priority: normal Milestone: R1
Component: - General Version: R1/Package Management
Keywords: package daemon Cc:
Blocked By: Blocking:
Platform: All

Description

After installing bepdf, package_daemon crashed straight away. I'm attaching the report to the ticket.

This is on a new PM build, just built a few mns by Ingo.

Attachments (1)

package_daemon-712-debug-14-09-2013-17-47-22.report (9.0 KB ) - added by DaaT 12 years ago.

Download all attachments as: .zip

Change History (2)

comment:1 by bonefish, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in 0af009d250c4f07925a26d60c735e94746e8de62.

Note: See TracTickets for help on using tickets.