package daemon: Fix use of destroyed objects

Fixes #9957.